# libservercore

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
crates/server-core-taxonomy/: Cargo.toml  README.md
crates/server-core-taxonomy/src/: lib.rs
crates/server-flavor-core/: Cargo.toml  README.md
crates/server-flavor-core/src/: lib.rs
crates/server-flow/: Cargo.toml  README.md
crates/server-flow/src/: error.rs  launch.rs  lib.rs  process_tree.rs  spec.rs  status.rs  stop.rs
crates/sl-libscv/: Cargo.toml  README.md
crates/sl-libscv/src/: discovery.rs  document.rs  error.rs  formats.rs  lib.rs  state.rs
crates/sl-server-info/: Cargo.toml  README.md
crates/sl-server-info/src/: lib.rs  log.rs  metrics.rs  model.rs  rcon.rs  snapshot.rs
crates/sl-server-launch-plan-core/: Cargo.toml  README.md
crates/sl-server-launch-plan-core/src/: lib.rs
crates/sl-server-startup-scan-core/: Cargo.toml  README.md
crates/sl-server-startup-scan-core/src/: lib.rs
