[package]
name = "sl-server-flow"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Local Minecraft server lifecycle flow primitives and execution support"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["minecraft", "server", "lifecycle", "process", "launch"]
categories = ["config", "game-development"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[lib]
name = "server_flow"
path = "src/lib.rs"

[dependencies]
sl-server-flavor-core = { path = "../server-flavor-core", version = "0.2.0" }
serde = { version = "1", features = ["derive"], optional = true }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["dep:serde", "sl-server-flavor-core/serde"]
