[package]
name = "sl-server-info"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Runtime server information probes, metrics, and log parsing"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["minecraft", "server", "rcon", "monitoring", "logs"]
categories = ["config", "game-development"]
include = ["src/**/*", "Cargo.toml", "README.md", "../../LICENSE"]

[lib]
name = "sl_server_info"
path = "src/lib.rs"

[dependencies]
sl-server-core-taxonomy = { path = "../server-core-taxonomy", version = "0.1.1" }
serde = { version = "1", features = ["derive"], optional = true }
regex = "1"
rcon = { version = "0.6", features = ["rt-tokio"] }
tokio = { version = "1", features = ["rt", "net", "time"] }

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["dep:serde", "sl-server-core-taxonomy/serde"]
